<resources>
    <string name="app_name">Nebula Connect</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="error_invalid_email">Username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_contact">Enter 10 digit no.</string>
    <string name="error_incorrect_npp">Enter proper code</string>
    <string name="error_more_3">Enter at least 3 characters</string>
    <string name="error_proper_field">Enter proper field</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_shop">Enter shop name here</string>
    <string name="shop_name">Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="alt_no">Alternate Mobile no.</string>
    <string name="verify">Verify</string>
    <string name="village">Village</string>
    <string name="photo">Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="save_upload">Upload</string>
    <string name="qty">Qty</string>
    <string name="send_logs">Send Logs</string>
    <string name="last_visit">Reference Code :\u0020  </string>
    <string name="shop_name_list">Attendee Name :\u0020  </string>
    <string name="sp">SP(₹)</string>
    <string name="available">Avail. Qty</string>
    <string name="loc_write_read">For Nebula Connect app to work properly it requires Location,Storage and Phone permissions.Please allow these permissions.</string>
    <string name="loc_read">For Nebula Connect app to work properly it requires Location and Phone permissions.Please allow these permissions.</string>
    <string name="loc_write">For Nebula Connect app to work properly it requires Location and Storage permissions.Please allow these permissions.</string>
    <string name="read_write">For Nebula Connect app to work properly it requires Storage and Phone permissions.Please allow these permissions.</string>
    <string name="loc">For Nebula Connect app to work properly it requires Location permission.</string>
    <string name="cam">For Nebula Connect app to work properly it requires Camera permission.</string>
    <string name="write">For Nebula Connect app to work properly it requires Storage permission.</string>
    <string name="phone">For Nebula Connect app to work properly it requires Phone permission.</string>
    <string name="loc_read_write">For Nebula Connect app to work properly it requires Storage, Location and Phone permissions.Please allow these permissions.</string>
    <string name="write_read">For Nebula Connect app to work properly it requires Storage and Phone permissions.Please allow these permissions.</string>
    <string name="cam_stor">For Nebula Connect app to work properly it requires Storage and Camera permissions.Please allow these permissions.</string>

    <string name="read">For Nebula Connect app to work properly it requires Phone permission.</string>
    <string name="stor_permission">Please give Storage permission to proceed further</string>
    <string name="camera_permission">Please give Camera permission to proceed further</string>
    <string name="loca_permission">Please give Location permission to proceed further</string>


</resources>
