<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/txt_light"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="@drawable/login_top">

                <TextView
                    android:id="@+id/tddxt_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:text="Nebula"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    />

                <TextView
                    android:id="@+id/txt_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    android:text="Connect"
                    android:layout_marginBottom="30dp"
                    android:textAlignment="center"
                    android:textColor="@color/primary_txt_color"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="50dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primary_dark"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="text"
                        android:maxLines="1"
                        android:backgroundTint="@color/primary_dark"
                        android:singleLine="true"
                       />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primary_dark"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                   >

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:backgroundTint="@color/primary_dark"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/blue_btn_default"
                    android:alpha="0.8"
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
